--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     user-select: none;
 }
 
+body {
+    overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
+}
+
 #root {
     overflow: hidden;
 }
