--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@ body::-webkit-scrollbar {
     width: 0;
 }
 
+@media (max-width: 667px) {
+    body {
+        overflow: auto;
+    }
+}
+
 #root {
     overflow: hidden;
 }
